syntax = "proto3";

option go_package = "./rpc";

package inventory;

service Inventory {
    rpc AddItem(InventoryRequest) returns (SimpleResponse) {}
    rpc GetItems(Empty) returns (ItemsResponse) {}
    rpc AddQuantity(AddQuantityRequest) returns (SimpleResponse) {}
    rpc Search(SearchRequest) returns (stream SearchResponse) {}
}

message Empty {}

message InventoryRequest {
    Item item = 1;
}

message AddQuantityRequest {
    string name=1;
    int32 quantity=2;
}

message SimpleResponse {
    string msg = 1;
}

message ItemsResponse {
    repeated Item items=1;
}

message Item {
    string name=1;
    int32 quantity=2;
}

message SearchRequest {
    string name=1;
    int32 min_quantity=2;
    int32 max_quantity=3;
}

message SearchResponse {
    Item item=1;
}
